# erik

./: .gitignore  2012Feb-IMACS.ipynb  2012Jan-HYDRA.ipynb  2013Apr-MMTHecto.ipynb  2013Aug-HYDRA.ipynb  2013Feb-IMACS.ipynb  2013HYDRA.ipynb  2013Jan-HYDRA.ipynb  2013Jun-IMACS.ipynb  2014Feb-HYDRA.ipynb  2014Mar-IMACS.ipynb  Jan12.ipynb  LICENSE  Miscellaneous.ipynb  README.md  aat.py  bossanova.py  casjobs.py  decals.py  distantlg.py  do_whydra  hosts.py  imacs.envars  magellan.py  mmtbino.py  mmthecto.py  parsetab.py  pyproject.toml  pyspherematch.py  reduce_saga.py  saga_reduce_aat.py  targeting.py  targetting.py  utils.py  wiyn.py  yao-img-browser.html
bossanova/: nplots.py
imacs/: imacs.envars
ipython_notebooks/: 2013Apr-MMTHecto.ipynb  2013Aug-HYDRA.ipynb  2013Feb-IMACS.ipynb  2013Jan-HYDRA.ipynb  2013Jul-BOSSANOVA proposal.ipynb  2013Jun-IMACS.ipynb  2014Aug-IMACS.ipynb  2014Aug-MMTHecto.ipynb  2014Feb-HYDRA.ipynb  2014Jan-HYDRA.ipynb  2014Jul-HYDRA.ipynb  2014Jul-IMACS.ipynb  2014July-AAT.ipynb  2014Mar-HYDRA.ipynb  2014Mar-IMACS.ipynb  2014May-MMTHecto.ipynb  2015Feb-MMTHecto.ipynb  2015Jul-IMACS.ipynb  2015June-AAT.ipynb  2015Mar-IMACS.ipynb  2015Mar-MMTHecto.ipynb  2015May-Keck.ipynb  2015Nov-MMTHecto.ipynb  2016Feb-MMTHecto.ipynb  2016Jul-AAT.ipynb  2016Mar-MMTHecto.ipynb  2016Oct-MMTHecto.ipynb  2017Jan-MMTHecto.ipynb  2018Feb-Bino.ipynb  2018Jan-Host info using new saga.ipynb  2018Jun-AAT-Take2.ipynb  2018Jun-AAT-night.ipynb  2018Jun-AAT.ipynb  2018Oct-AAT-night1.ipynb  2018Oct-AAT-night2.ipynb  2018Oct-AAT-night3.ipynb  2018Oct-AAT.ipynb  (+43 more)
(+16 files in other folders)
