[tool.poetry]
name = "saga-erik"
version = "0.1.0"
description = ""
authors = ["Erik Tollerud <erik.tollerud@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">=1.16"
numexpr = ">=2.7"
astropy = ">=3.0"
easyquery = ">=0.2"
requests = ">=2.20"
healpy = ">=1.12"
fast3tree = ">=0.3.1"
scikit-learn = ">=0.20"
pyperclip = ">=1.7"
ipython = ">=8.14.0"
jupyterlab = ">=4.0.2"
saga = {path = "../saga", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
